<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:showu="http://schemas.android.com/apk/res/com.showu.baogu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_blue_bg"
    tools:context=".RegistMain">

    <com.showu.common.widget.TitleWidget
        android:id="@id/titleBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        showu:center_view_text="@string/regist_pop"/>


    <LinearLayout
        android:id="@+id/fragment_regist_phone_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_32"
        android:layout_below="@+id/titleBar"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/regist_auth_sended_tips"
            android:padding="@dimen/margin_8"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/regist_auth_input_tips"
            android:padding="@dimen/margin_8"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_marginTop="@dimen/margin_3"
            android:layout_marginBottom="@dimen/margin_3"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/fragment_regist_verify_no"
                android:layout_width="fill_parent"
                android:inputType="number"
                android:layout_height="@dimen/editext_height"
                android:background="@drawable/round_bg"
                android:hint="@string/regist_auth_no"
                />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/fragment_regist_verify_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/btn_blue"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/fragment_regist_phone_layout"
        android:text="@string/regist_auth_confirm"/>

</RelativeLayout>
