<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:showu="http://schemas.android.com/apk/res/com.qinnuan.engine"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_blue_bg"
    tools:context=".RegistMain">

    <com.qinnuan.common.widget.TitleWidget
        android:id="@id/titleBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        showu:center_view_text="@string/regist_pop"/>

    <RelativeLayout
        android:id="@+id/fragment_otherlogin_home_head_layout"
        android:layout_width="@dimen/headsize_layout"
        android:layout_height="@dimen/headsize_layout"
        android:layout_below="@+id/titleBar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_32">

        <ImageView
            android:id="@+id/fragment_otherlogin_home_head"
            android:layout_width="@dimen/headsize_120"
            android:layout_height="@dimen/headsize_120"
            android:layout_centerInParent="true"
            android:src="@drawable/defaul_head"
            />
        <ImageView
            android:id="@+id/fragment_otherlogin_home_take"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/take_pic_bg"
            android:layout_marginBottom="-8dp"
            android:layout_marginRight="-8dp"
            android:layout_alignRight="@+id/fragment_otherlogin_home_head"
            android:layout_alignBottom="@+id/fragment_otherlogin_home_head"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/fragment_otherlogin_home_infolayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_32"
        android:layout_below="@+id/fragment_otherlogin_home_head_layout"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/fragment_otherlogin_home_name"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/editext_height"
                android:background="@drawable/round_bg_top"
                android:hint="@string/regist_name"
                />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/editext_height"
            android:background="@drawable/round_bg_bottom"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/sex"/>

            <RadioGroup
                android:id="@+id/fragment_otherlogin_home_sex_radioG"
                android:layout_width="wrap_content"
                android:layout_centerInParent="true"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <RadioButton
                    android:id="@+id/fragment_otherlogin_home_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sex_male"/>

                <RadioButton
                    android:id="@+id/fragment_otherlogin_home_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sex_female"/>
            </RadioGroup>
        </RelativeLayout>

    </LinearLayout>

    <Button
        android:id="@+id/fragment_otherlogin_home_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        style="@style/btn_blue"
        android:layout_below="@+id/fragment_otherlogin_home_infolayout"
        android:text="@string/login_other_goto_baogu"/>
</RelativeLayout>
