<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:showu="http://schemas.android.com/apk/res/com.qinnuan.engine"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_blue_bg" >

    <com.qinnuan.common.widget.TitleWidget
        android:id="@id/titleBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        showu:center_view_text="@string/friend_search_friend"/>

    <LinearLayout
        android:id="@+id/fragment_regist_phone_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_32"
        android:layout_below="@+id/titleBar"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/friend_popid_name"
            android:padding="@dimen/margin_8"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_marginTop="@dimen/margin_3"
            android:layout_marginBottom="@dimen/margin_3"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/fragment_friend_search_keyword"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/editext_height"
                android:background="@drawable/round_bg"
                />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/fragment_friend_search_search"
        style="@style/btn_blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/fragment_regist_phone_layout"
        android:text="@string/friend_search"/>

</RelativeLayout>
